--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script type="text/javascript" src="js/hk/js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="js/hk/js/jsencrypt.min.js"></script>
+    <script type="text/javascript" src="js/hk/js/jsWebControl-1.0.0.min.js"></script>
   </head>
   <body>
     <noscript>
